// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TowerDisk snapshot matches snapshot with isDragging false 1`] = `
<DocumentFragment>
  <div>
    image-mock
  </div>
  <div
    class="disk"
  >
    <img
      alt="alt-text"
      class="disk-image"
      src=""
    />
  </div>
</DocumentFragment>
`;

exports[`TowerDisk snapshot matches snapshot with isDragging true 1`] = `
<DocumentFragment>
  <div>
    image-mock
  </div>
  <div
    class="disk dragging"
  >
    <img
      alt="alt-text"
      class="disk-image"
      src=""
    />
  </div>
  <div
    class="disk-drag-layer"
    style="pointer-events: none; position: fixed; z-index: 10; left: 0px; top: 0px; width: 100%; height: 100%;"
  >
    <div
      class="disk dragging-preview"
      style="display: none;"
    >
      <img
        alt="alt-text"
        class="disk-image"
        src=""
      />
    </div>
  </div>
</DocumentFragment>
`;
